--- a/tp5/index.html
+++ b/tp5/index.html
@@ -8,15 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/weather-icons.min.css">
+        <link rel="stylesheet" href="bootstrap.css">
+        <link rel="stylesheet" href="bootstrap.min.css">
+        <link rel="stylesheet" href="weather-icons.min.css">
 
         <!-- Place favicon.ico in the root directory -->
-         <script src="js/libs/bootstrap.js"></script>
-         <script src="js/libs/bootstrap.min.js"></script>
-         <script src="js/libs/vue.js"></script>
-         <script src="js/main.js"></script>
+         <script src="bootstrap.js"></script>
+         <script src="bootstrap.min.js"></script>
+         <script src="vue.js"></script>
+         <script src="main.js"></script>
         <style>
           body{
               background-color: #e9ebee;
